@@ -10,6 +10,9 @@ What's New in Python 3.3.0 Release Candidate 1?
 Core and Builtins
 -----------------
 
+- Issue #15778: ensure that str(ImportError(msg)) returns a str
+  even when msg isn't a str.
+
 - Issue #2051: Source file permission bits are once again correctly
   copied to the cached bytecode file. (The migration to importlib
   reintroduced this problem because these was no regression test. A test
